force-app/main/default/objects/AAO_Run_Lease__c/fields/AAO_Acquired_At__c.field-meta.xml
<CustomField>
    <fullName>AAO_Acquired_At__c</fullName>
    <description>When this row was written. On a Holder it is how a stale lease is recognised; on a Waiting row it records arrival, which is deliberately NOT what the drain orders by.</description>
    <label>Acquired At</label>
    <type>DateTime</type>
</CustomField>