force-app/main/default/objects/AAO_Run_Lease__c/fields/AAO_Kind__c.field-meta.xml
<CustomField>
    <fullName>AAO_Kind__c</fullName>
    <description>Holder or Waiting. Redundant with the key prefix and kept anyway, because a prefix match is not a filter anyone can read and this is the column the drain queries on.</description>
    <label>Kind</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Holder</fullName><default>false</default><label>Holder</label></value>
            <value><fullName>Waiting</fullName><default>false</default><label>Waiting</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>