force-app/main/default/objects/AAO_Run_Lease__c/fields/AAO_Lease_Key__c.field-meta.xml
<CustomField>
    <fullName>AAO_Lease_Key__c</fullName>
    <description>The lock itself. HOLD|opportunityId for the one pass holding the deal; WAIT|opportunityId|sourceId for a pass enrolled behind it. UNIQUE, AND THE UNIQUENESS IS THE MECHANISM, not a guard on it: two passes racing for one deal both insert HOLD|same, the index refuses the loser, and exactly one wins. A read-then-branch acquire cannot do this - both readers see an empty table and both proceed - which is why this is the one place in the system where DUPLICATE_VALUE is a lawful answer rather than the hundred-sixteenth stamp's alarm. That stamp governs ACCRUAL state, where occupancy discovery at insert time means a writer skipped its read; a lease has nothing to accrue and no read that could be atomic. Written by: AAO_RunLease. Read by: AAO_RunLease.</description>
    <externalId>true</externalId>
    <label>Lease Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>