force-app/main/default/objects/AAO_Run_Lease__c/fields/AAO_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AAO_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The deal the lease serializes. The grain is the OPPORTUNITY because that is the grain of the state a racing pass would corrupt: the map, the board, the answers.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>AAO Run Leases</relationshipLabel>
    <relationshipName>AAO_Run_Leases</relationshipName>
    <type>Lookup</type>
</CustomField>