force-app/main/default/objects/AAO_Run_Lease__c/fields/AAO_Run_Key__c.field-meta.xml
<CustomField>
    <fullName>AAO_Run_Key__c</fullName>
    <description>Which pass holds or waits. Carried so a release can refuse to release someone else's lease, and so a stuck lease names the run to look up on the receipt.</description>
    <label>Run Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>