force-app/main/default/objects/AAO_Run_Lease__c/fields/AAO_Source__c.field-meta.xml
<CustomField>
    <fullName>AAO_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The artifact this pass is reading. The drain orders on THIS row's AAO_Evidence_Occurred__c, so the ordering law reads the conversation's own clock and never the queue's.</description>
    <label>Source</label>
    <referenceTo>AAO_Source__c</referenceTo>
    <relationshipLabel>AAO Run Leases</relationshipLabel>
    <relationshipName>AAO_Run_Leases</relationshipName>
    <type>Lookup</type>
</CustomField>