force-app/main/default/objects/AAO_Run_Lease__c/fields/AAO_Stage__c.field-meta.xml
<CustomField>
    <fullName>AAO_Stage__c</fullName>
    <description>The stage a waiting pass resumes at, so an enrolment that happened mid-pass resumes where it stopped rather than restarting and re-locating pairs.</description>
    <label>Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>