force-app/main/default/objects/AAO_Run_Lease__c/fields/AAO_Synthetic__c.field-meta.xml
<CustomField>
    <fullName>AAO_Synthetic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The standing machine-row marker, carried so a rehearsal's leases are enumerable as ours.</description>
    <label>Synthetic</label>
    <type>Checkbox</type>
</CustomField>